// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cancelStandbyListingPagePage should not render same day update label text on standby confirmation page 1`] = `
<div>
  <div
    class="cancel-standby-page"
  >
    <div>
      <div
        class="page-header"
        id=""
      >
        <span
          class="page-title"
        >
          Confirmation
        </span>
      </div>
      <div />
    </div>
    <div
      class="cancel-standby-page--body"
    >
      <div
        class="cancel-standby-page--body-title"
      >
        You have cancelled your stand by listing for the flight below
      </div>
      <div
        class="cancel-standby-page--body-subtitle"
      >
        You're good to go! No need to do anything further.
      </div>
      <div
        class="cancel-standby-page--body-label"
      >
        CANCELLED STANDBY LISTING
      </div>
      <div
        class="cancel-standby-page--body-card"
      >
        <div
          class="flight-time-passengers-card"
        >
          <div
            class="flight-time-passengers-card--title"
          >
            <div
              class="flight-time-passengers-card--date"
            >
              <div
                class="flight-time-passengers-card--month"
              >
                Jan 04
              </div>
              <div
                class="flight-time-passengers-card--day"
              >
                Wednesday
              </div>
            </div>
            <div
              class="flight-time-passengers-card--flight"
            >
              <div
                class="flight-time-passengers-card--from"
              >
                <div
                  class="flight-time-passengers-card--place"
                >
                  PHX
                </div>
                <div
                  class="flight-time-passengers-card--time"
                >
                  03:30 PM
                </div>
              </div>
              <div
                class="flight-time-passengers-card--icon-col flight-time-passengers-card-flight-icon"
              >
                <i
                  class="icon-airplane icon icon_airplane"
                />
              </div>
              <div
                class="flight-time-passengers-card--to"
              >
                <div
                  class="flight-time-passengers-card--place"
                >
                  DEN
                </div>
                <div
                  class="flight-time-passengers-card--time"
                >
                  06:30 PM
                </div>
              </div>
            </div>
          </div>
          <div
            class="flight-time-passengers-card--divider"
          />
          <div
            class="flight-time-passengers-card--passenger-title"
          >
            SAME_DAY__PRICING_TITLE__PASSENGERS
          </div>
          <div
            class="flight-time-passengers-card--section"
          >
            <div
              class="flight-time-passengers-card--passengers"
            >
              <div
                class="flight-time-passengers-card--passengers-detail"
              >
                <div
                  class="flight-time-passengers-card--passengers-detail-name"
                >
                  Tesla Awesome
                </div>
                <div
                  class="flight-time-passengers-card--passengers-detail-number"
                >
                  MY_ACCOUNT__HEADER__RR_NUMBER 601655902
                </div>
              </div>
            </div>
            <div
              class="flight-time-passengers-card--passengers"
            >
              <div
                class="flight-time-passengers-card--passengers-detail"
              >
                <div
                  class="flight-time-passengers-card--passengers-detail-name"
                >
                  Clarence Clayborn
                </div>
              </div>
            </div>
            <div
              class="flight-time-passengers-card--passengers"
            >
              <div
                class="flight-time-passengers-card--passengers-detail"
              >
                <div
                  class="flight-time-passengers-card--passengers-detail-name"
                >
                  Ryan Clayborn
                </div>
              </div>
            </div>
            <div
              class="flight-time-passengers-card--passengers"
            >
              <div
                class="flight-time-passengers-card--passengers-detail"
              >
                <div
                  class="flight-time-passengers-card--passengers-detail-name"
                >
                  Mounica Rachakonda
                </div>
              </div>
            </div>
            <div
              class="flight-time-passengers-card--passengers"
            >
              <div
                class="flight-time-passengers-card--passengers-detail"
              >
                <div
                  class="flight-time-passengers-card--passengers-detail-name"
                >
                  Abdul Wahab
                </div>
              </div>
            </div>
          </div>
        </div>
        ;
      </div>
    </div>
  </div>
</div>
`;

exports[`cancelStandbyListingPagePage should render standby confirmation page 1`] = `
<div>
  <div
    class="cancel-standby-page"
  >
    <div>
      <div
        class="page-header"
        id=""
      >
        <span
          class="page-title"
        >
          Confirmation
        </span>
      </div>
      <div />
    </div>
    <div
      class="cancel-standby-page--body"
    >
      <div
        class="cancel-standby-page--body-title"
      >
        You have cancelled your stand by listing for the flight below
      </div>
      <div
        class="cancel-standby-page--body-subtitle"
      >
        You're good to go! No need to do anything further.
      </div>
      <div
        class="cancel-standby-page--body-label"
      >
        CANCELLED STANDBY LISTING
      </div>
      <div
        class="cancel-standby-page--body-card"
      >
        <div
          class="flight-time-passengers-card"
        >
          <div
            class="flight-time-passengers-card--title"
          >
            <div
              class="flight-time-passengers-card--date"
            >
              <div
                class="flight-time-passengers-card--month"
              >
                Jan 04
              </div>
              <div
                class="flight-time-passengers-card--day"
              >
                Wednesday
              </div>
            </div>
            <div
              class="flight-time-passengers-card--flight"
            >
              <div
                class="flight-time-passengers-card--from"
              >
                <div
                  class="flight-time-passengers-card--place"
                >
                  PHX
                </div>
                <div
                  class="flight-time-passengers-card--time"
                >
                  03:30 PM
                </div>
              </div>
              <div
                class="flight-time-passengers-card--icon-col flight-time-passengers-card-flight-icon"
              >
                <i
                  class="icon-airplane icon icon_airplane"
                />
              </div>
              <div
                class="flight-time-passengers-card--to"
              >
                <div
                  class="flight-time-passengers-card--place"
                >
                  DEN
                </div>
                <div
                  class="flight-time-passengers-card--time"
                >
                  06:30 PM
                </div>
              </div>
            </div>
          </div>
          <div
            class="flight-time-passengers-card--divider"
          />
          <div
            class="flight-time-passengers-card--passenger-title"
          >
            SAME_DAY__PRICING_TITLE__PASSENGERS
          </div>
          <div
            class="flight-time-passengers-card--section"
          >
            <div
              class="flight-time-passengers-card--passengers"
            >
              <div
                class="flight-time-passengers-card--passengers-detail"
              >
                <div
                  class="flight-time-passengers-card--passengers-detail-name"
                >
                  Tesla Awesome
                </div>
                <div
                  class="flight-time-passengers-card--passengers-detail-number"
                >
                  MY_ACCOUNT__HEADER__RR_NUMBER 601655902
                </div>
              </div>
            </div>
            <div
              class="flight-time-passengers-card--passengers"
            >
              <div
                class="flight-time-passengers-card--passengers-detail"
              >
                <div
                  class="flight-time-passengers-card--passengers-detail-name"
                >
                  Clarence Clayborn
                </div>
              </div>
            </div>
            <div
              class="flight-time-passengers-card--passengers"
            >
              <div
                class="flight-time-passengers-card--passengers-detail"
              >
                <div
                  class="flight-time-passengers-card--passengers-detail-name"
                >
                  Ryan Clayborn
                </div>
              </div>
            </div>
            <div
              class="flight-time-passengers-card--passengers"
            >
              <div
                class="flight-time-passengers-card--passengers-detail"
              >
                <div
                  class="flight-time-passengers-card--passengers-detail-name"
                >
                  Mounica Rachakonda
                </div>
              </div>
            </div>
            <div
              class="flight-time-passengers-card--passengers"
            >
              <div
                class="flight-time-passengers-card--passengers-detail"
              >
                <div
                  class="flight-time-passengers-card--passengers-detail-name"
                >
                  Abdul Wahab
                </div>
              </div>
            </div>
          </div>
        </div>
        ;
      </div>
      <div
        class="cancel-standby-page--body-button"
      >
        <button
          class="button button--fluid larger button--blue"
          role="submit"
          type="submit"
        >
          List for standby on another flight
        </button>
      </div>
    </div>
  </div>
</div>
`;
